feat: add resource limits to all OLM pods for OLM releases on OCP above 0.13.0
Upstream-repository: operator-lifecycle-manager
Upstream-commit: 7ce84b59a9f8121e388756974720663ead10e604

--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_15-packageserver.clusterserviceversion.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_15-packageserver.clusterserviceversion.yaml
@@ -122,6 +122,9 @@ spec:
                     port: 5443
                 terminationMessagePolicy: FallbackToLogsOnError
                 resources:
+                  limits:
+                    cpu: 100m
+                    memory: 100Mi
                   requests:
                     cpu: 10m
                     memory: 50Mi
