--- a/staging/operator-lifecycle-manager/deploy/ocp/values.yaml
+++ b/staging/operator-lifecycle-manager/deploy/ocp/values.yaml
@@ -32,6 +32,9 @@ olm:
   tlsCertPath: /var/run/secrets/serving-cert/tls.crt
   tlsKeyPath: /var/run/secrets/serving-cert/tls.key
   resources:
+    limits:
+      cpu: 400m
+      memory: 400Mi
     requests:
       cpu: 10m
       memory: 160Mi
@@ -58,6 +61,9 @@ catalog:
     effect: NoExecute
     tolerationSeconds: 120
   resources:
+    limits:
+      cpu: 200m
+      memory: 300Mi
     requests:
       cpu: 10m
       memory: 80Mi
@@ -84,6 +90,9 @@ package:
     effect: NoExecute
     tolerationSeconds: 120
   resources:
+    limits:
+      cpu: 100m
+      memory: 100Mi
     requests:
       cpu: 10m
       memory: 50Mi
