Fix CI unit tests
This commit introduces a change which ensures that the GOFLAGS variable
is not set when running Makefile commands.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 19d703d7a6ef24946179e8d10c36fc562df4ba9c

--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -2,6 +2,12 @@
 #  OLM - Build and Test  #
 ##########################
 
+# Undefine GOFLAGS environment variable.
+ifdef GOFLAGS
+$(warning Undefining GOFLAGS set in CI)
+undefine GOFLAGS
+endif
+
 SHELL := /bin/bash
 PKG   := github.com/operator-framework/operator-lifecycle-manager
 MOD_FLAGS := $(shell (go version | grep -q -E "1\.1[1-9]") && echo -mod=vendor)
