Add test target
Upstream-repository: api
Upstream-commit: 5d38ef761affd48c7270d7952e05e9c3b691b3cd

--- a/staging/api/Makefile
+++ b/staging/api/Makefile
@@ -46,3 +46,17 @@ tidy: ## Update dependencies
 clean: ## Clean up the build artifacts
 	$(Q)rm -rf build
 
+##############################
+# Tests                      #
+##############################
+
+##@ Tests
+
+# Static tests.
+.PHONY: test test-unit
+
+test: test-unit ## Run the tests
+
+TEST_PKGS:=$(shell go list ./...)
+test-unit: ## Run the unit tests
+	$(Q)go test -short ${TEST_PKGS}
