chore(codegen): clean up codegen make rules and scripts
Upstream-repository: operator-lifecycle-manager
Upstream-commit: 4ed256ded5ae7fde345abda56d4462cb700ac33e

--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -13,16 +13,14 @@ PKG   := github.com/operator-framework/operator-lifecycle-manager
 MOD_FLAGS := $(shell (go version | grep -q -E "1\.1[1-9]") && echo -mod=vendor)
 CMDS  := $(shell go list $(MOD_FLAGS) ./cmd/...)
 TCMDS := $(shell go list $(MOD_FLAGS) ./test/e2e/...)
-CODEGEN_INTERNAL := ./vendor/k8s.io/code-generator/generate_internal_groups.sh
-MOCKGEN := ./scripts/generate_mocks.sh
-# counterfeiter := $(GOBIN)/counterfeiter
-# mockgen := $(GOBIN)/mockgen
+MOCKGEN := ./scripts/update_mockgen.sh
+CODEGEN := ./scripts/update_codegen.sh
 IMAGE_REPO := quay.io/operator-framework/olm
 IMAGE_TAG ?= "dev"
 SPECIFIC_UNIT_TEST := $(if $(TEST),-run $(TEST),)
 LOCAL_NAMESPACE := "olm"
 export GO111MODULE=on
-CONTROLLER_GEN := go run ./vendor/sigs.k8s.io/controller-tools/cmd/controller-gen
+CONTROLLER_GEN := go run -mod=vendor ./vendor/sigs.k8s.io/controller-tools/cmd/controller-gen
 YQ_INTERNAL := go run ./vendor/github.com/mikefarah/yq/v2/
 
 # ART builds are performed in dist-git, with content (but not commits) copied 
@@ -141,59 +139,32 @@ clean:
 	@rm -rf test/e2e/log
 	@rm -rf e2e.namespace
 
-# Must be run in gopath: https://github.com/kubernetes/kubernetes/issues/67566
-# use container-codegen
-codegen: export GO111MODULE := off
-codegen:
-	cp scripts/generate_internal_groups.sh vendor/k8s.io/code-generator/generate_internal_groups.sh
-	mkdir -p vendor/k8s.io/code-generator/hack
-	cp boilerplate.go.txt vendor/k8s.io/code-generator/hack/boilerplate.go.txt
-	go run vendor/k8s.io/kube-openapi/cmd/openapi-gen/openapi-gen.go --logtostderr -i ./vendor/k8s.io/apimachinery/pkg/runtime,./vendor/k8s.io/apimachinery/pkg/apis/meta/v1,./vendor/k8s.io/apimachinery/pkg/version,./pkg/package-server/apis/operators/v1,./pkg/package-server/apis/apps/v1alpha1,./pkg/api/apis/operators/v1alpha1,./pkg/lib/version -p $(PKG)/pkg/package-server/apis/openapi -O zz_generated.openapi -h boilerplate.go.txt -r /dev/null
-	$(CODEGEN_INTERNAL) deepcopy,conversion,client,lister,informer $(PKG)/pkg/api/client $(PKG)/pkg/api/apis $(PKG)/pkg/api/apis "operators:v1alpha1,v1"
-	$(CODEGEN_INTERNAL) all $(PKG)/pkg/package-server/client $(PKG)/pkg/package-server/apis $(PKG)/pkg/package-server/apis "operators:v1 apps:v1alpha1"
+
+# Generate manifests for CRDs
+manifests: vendor
 	$(CONTROLLER_GEN) schemapatch:manifests=./deploy/chart/templates paths=./pkg/api/apis/operators/v1alpha1/... output:dir=./deploy/chart/templates
 	$(CONTROLLER_GEN) schemapatch:manifests=./deploy/chart/templates paths=./pkg/api/apis/operators/v1/... output:dir=./deploy/chart/templates
 	$(YQ_INTERNAL) w --inplace deploy/chart/templates/0000_50_olm_03-clusterserviceversion.crd.yaml spec.validation.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.metadata.x-kubernetes-preserve-unknown-fields true
-container-codegen:
-	docker build -t olm:codegen -f codegen.Dockerfile .
-	docker run --name temp-codegen olm:codegen /bin/true
-	docker cp temp-codegen:/go/src/github.com/operator-framework/operator-lifecycle-manager/pkg/api/client/. ./pkg/api/client
-	docker cp temp-codegen:/go/src/github.com/operator-framework/operator-lifecycle-manager/pkg/api/apis/. ./pkg/api/apis
-	docker cp temp-codegen:/go/src/github.com/operator-framework/operator-lifecycle-manager/pkg/package-server/apis/. ./pkg/package-server/apis
-	docker cp temp-codegen:/go/src/github.com/operator-framework/operator-lifecycle-manager/pkg/package-server/client/. ./pkg/package-server/client
-	docker rm temp-codegen
 
-container-mockgen:
-	docker build -t olm:mockgen -f mockgen.Dockerfile . --no-cache
-	docker run --name temp-mockgen olm:mockgen /bin/true
-	docker cp temp-mockgen:/operator-lifecycle-manager/pkg/api/wrappers/wrappersfakes/. ./pkg/api/wrappers/wrappersfakes
-	docker cp temp-mockgen:/operator-lifecycle-manager/pkg/lib/operatorlister/operatorlisterfakes/. ./pkg/lib/operatorlister/operatorlisterfakes
-	docker cp temp-mockgen:/operator-lifecycle-manager/pkg/lib/operatorclient/operatorclientmocks/. ./pkg/lib/operatorclient/operatorclientmocks
-	docker cp temp-mockgen:/operator-lifecycle-manager/pkg/fakes/. ./pkg/fakes
-	docker cp temp-mockgen:/operator-lifecycle-manager/pkg/controller/registry/resolver/fakes/. ./pkg/controller/registry/resolver/fakes
-	docker cp temp-mockgen:/operator-lifecycle-manager/pkg/package-server/client/fakes/. ./pkg/package-server/client/fakes
-	docker rm temp-mockgen
+# Generate clients, listers, and informers
+codegen:
+	$(CODEGEN)
 
-verify: verify-codegen
-
-# Must be run in gopath: https://github.com/kubernetes/kubernetes/issues/67566
-verify-codegen: codegen
-	git diff --exit-code
-
-verify-release: ver=$(shell cat OLM_VERSION)
-verify-release:
-	rm -rf manifests
-	mkdir manifests
-	./scripts/package_release.sh $(ver) manifests deploy/ocp/values.yaml
-	# requires gnu sed if on mac
-	find ./manifests -type f -exec sed -i "/^#/d" {} \;
-	find ./manifests -type f -exec sed -i "1{/---/d}" {} \;
-	git diff --exit-code
-
+# Generate mock types.
 mockgen:
 	$(MOCKGEN)
 
-gen-all: container-codegen container-mockgen
+# Generates everything.
+gen-all: codegen mockgen manifests
+
+diff:
+	git diff --exit-code
+
+verify-codegen: codegen diff
+verify-mockgen: mockgen diff
+verify-manifests: manifests diff
+verify: verify-codegen verify-mockgen verify-manifests
+
 
 # before running release, bump the version in OLM_VERSION and push to master,
 # then tag those builds in quay with the version in OLM_VERSION
@@ -208,6 +179,8 @@ release:
 	# requires gnu sed if on mac
 	find ./manifests -type f -exec sed -i "/^#/d" {} \;
 	find ./manifests -type f -exec sed -i "1{/---/d}" {} \;
+
+verify-release: release diff
 
 package: olmref=$(shell docker inspect --format='{{index .RepoDigests 0}}' quay.io/operator-framework/olm:$(ver))
 package:
@@ -225,10 +198,6 @@ endif
 ifeq ($(quickstart), true)
 	./scripts/package_quickstart.sh deploy/$(target)/manifests/$(ver) deploy/$(target)/quickstart/olm.yaml deploy/$(target)/quickstart/crds.yaml deploy/$(target)/quickstart/install.sh
 endif
-
-##########################
-#  OLM - Commands        #
-##########################
 
 .PHONY: run-console-local
 run-console-local:
