--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_06-catalogsource.crd.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_06-catalogsource.crd.yaml
@@ -97,16 +97,6 @@ spec:
                 a registry-server with. Only used when SourceType = SourceTypeGrpc.
                 If present, the address field is ignored.
               type: string
-            poll:
-              description: Poll is used to determine the time interval between checks
-                of the latest catalog source version. The catalog operator polls to
-                see if a new version of the catalog source is available. If available,
-                the latest image is pulled and gRPC traffic is directed to the latest
-                catalog source.
-              type: object
-              properties:
-                interval:
-                  type: string
             publisher:
               type: string
             secrets:
@@ -119,6 +109,22 @@ spec:
             sourceType:
               description: SourceType is the type of source
               type: string
+            updateStrategy:
+              description: UpdateStrategy defines how updated catalog source images
+                can be discovered Consists of an interval that defines polling duration
+                and an embedded strategy type
+              type: object
+              properties:
+                registryPoll:
+                  type: object
+                  properties:
+                    interval:
+                      description: Interval is used to determine the time interval
+                        between checks of the latest catalog source version. The catalog
+                        operator polls to see if a new version of the catalog source
+                        is available. If available, the latest image is pulled and
+                        gRPC traffic is directed to the latest catalog source.
+                      type: string
         status:
           type: object
           properties:
