chore(build): only enable cgo for ci/prod builds
Upstream-repository: operator-lifecycle-manager
Upstream-commit: 932f30e730a90bf02a896bdb150150fe0b4e4d19

--- a/staging/operator-lifecycle-manager/Dockerfile
+++ b/staging/operator-lifecycle-manager/Dockerfile
@@ -21,7 +21,7 @@ COPY cmd cmd
 COPY test test
 COPY go.mod go.mod
 COPY go.sum go.sum
-RUN make build
+RUN CGO_ENABLED=1 make build
 
 FROM openshift/origin-base
 
