Reconcile manifests with templates.
Upstream-repository: operator-lifecycle-manager
Upstream-commit: e9b067432829d59999337cf95f890ad1577726a4

--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_03-clusterserviceversion.crd.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_03-clusterserviceversion.crd.yaml
@@ -40,6 +40,7 @@ spec:
     served: true
     storage: true
   scope: Namespaced
+  preserveUnknownFields: false
   subresources:
     status: {}
   validation:
