--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -109,7 +109,7 @@ setup-bare: clean e2e.namespace
 
 # e2e test exculding the rh-operators directory which tests rh-operators and their metric cardinality.
 e2e:
-	go test -v $(MOD_FLAGS) -failfast -timeout 70m `go list ./test/e2e/... | grep -v /rh-operators` -namespace=openshift-operators -kubeconfig=${KUBECONFIG} -olmNamespace=openshift-operator-lifecycle-manager -dummyImage=bitnami/nginx:latest
+	go test -v $(MOD_FLAGS) -failfast -timeout 70m ./test/e2e/... -namespace=openshift-operators -kubeconfig=${KUBECONFIG} -olmNamespace=openshift-operator-lifecycle-manager -dummyImage=bitnami/nginx:latest
 
 e2e-local: build-linux build-wait
 	. ./scripts/build_local.sh
@@ -123,7 +123,7 @@ e2e-local-docker:
 	. ./scripts/run_e2e_docker.sh $(TEST)
 
 e2e-operator-metrics:
-	go test -v $(MOD_FLAGS) -failfast -timeout 70m ./test/e2e/rh-operators
+	go test -v $(MOD_FLAGS) -failfast -timeout 70m ./test/rh-operators/...
 
 vendor:
 	go mod tidy
