--- a/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_08-catalog-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/templates/0000_50_olm_08-catalog-operator.deployment.yaml
@@ -34,6 +34,8 @@ spec:
           {{- if .Values.catalog.commandArgs }}
           - {{ .Values.catalog.commandArgs }}
           {{- end }}
+          - -util-image
+          -  {{ .Values.catalog.image.ref }}
           {{- if .Values.writeStatusNameCatalog }}
           - -writeStatusName
           - {{ .Values.writeStatusNameCatalog }}
