--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -75,6 +75,14 @@ build-wait: clean bin/wait
 bin/wait:
 	GOOS=linux GOARCH=386 go build -o $@ $(PKG)/test/e2e/wait
 
+build-util-linux: arch_flags=GOOS=linux GOARCH=386
+build-util-linux: build-util
+
+build-util: bin/cpb
+
+bin/cpb:
+	CGO_ENABLED=0 $(arch_flags) go build $(MOD_FLAGS) -ldflags '-extldflags "-static"' -o $@ ./util/cpb
+
 $(CMDS): version_flags=-ldflags "-X $(PKG)/pkg/version.GitCommit=$(GIT_COMMIT) -X $(PKG)/pkg/version.OLMVersion=`cat OLM_VERSION`"
 $(CMDS):
 	$(arch_flags) go $(build_cmd) $(MOD_FLAGS) $(version_flags) -o bin/$(shell basename $@) $@
@@ -84,7 +92,7 @@ build: clean $(CMDS)
 $(TCMDS):
 	go test -c $(BUILD_TAGS) $(MOD_FLAGS) -o bin/$(shell basename $@) $@
 
-run-local: build-linux build-wait
+run-local: build-linux build-wait build-util-linux
 	rm -rf build
 	. ./scripts/build_local.sh
 	mkdir -p build/resources
