--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_10-operatorgroup.crd.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_10-operatorgroup.crd.yaml
@@ -9,6 +9,9 @@ spec:
   - name: v1
     served: true
     storage: true
+  - name: v1alpha2
+    served: true
+    storage: false
   names:
     plural: operatorgroups
     singular: operatorgroup
