Unbreak the minikube mode of build_local.sh.
Fix the ordering of eval "$(minikube docker-env)" relative to local
image builds, which was broken in the process of fixing this script
for kind users.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: a13695f666e6c2f0cee8f861105e8e11e8fc9ae3

--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -73,7 +73,7 @@ build-linux: clean $(CMDS)
 build-wait: clean bin/wait
 
 bin/wait:
-	GOOS=linux GOARCH=386 go build -o $@ $(PKG)/test/e2e/wait
+	GOOS=linux GOARCH=386 go build $(MOD_FLAGS) -o $@ $(PKG)/test/e2e/wait
 
 build-util-linux: arch_flags=GOOS=linux GOARCH=386
 build-util-linux: build-util
