Add updated manifests from make release
Upstream-repository: operator-lifecycle-manager
Upstream-commit: 06faf2df2ade6b7aba1271dc442daa6998f49422

--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_15-packageserver.clusterserviceversion.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_15-packageserver.clusterserviceversion.yaml
@@ -123,6 +123,12 @@ spec:
                   requests:
                     cpu: 10m
                     memory: 50Mi
+                volumeMounts:
+                - name: tmpfs
+                  mountPath: /tmp
+              volumes:
+              - name: tmpfs
+                emptyDir: {}
   maturity: alpha
   version: 0.14.1
   apiservicedefinitions:
